Debugging Cohere data analyst

--- a/examples/cohere-code-interpreter-python/cohere_data_analyst.ipynb
+++ b/examples/cohere-code-interpreter-python/cohere_data_analyst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,6 @@
     "      print()\n",
     "\n",
     "      tool_results.append({\"call\": call, \"outputs\": invoke_tool(call, e2b_code_interpreter)})\n",
-    "      print(json.dumps(res, indent=2))\n",
     "\n",
     "    # send back the tool results\n",
     "    res = co.chat(\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -231,34 +230,30 @@
       "==================================================\n",
       "User Message: Run a Python code that simulates outcomes of playing rocks paper scissors 50 times and based on that, tell what was the most lucky to play.\n",
       "==================================================\n",
-      "I will write and execute Python code that simulates outcomes of playing rock paper scissors 50 times and based on that, tell what was the most lucky to play.\n",
+      "I will write and execute Python code that simulates the outcomes of playing rock, paper, scissors 50 times and determine which one is the luckiest to play.\n",
       "\n",
-      "🚨 MONITORING call: name='execute_python' parameters={'code': \"import random\\n\\n# Define the three possible choices\\nchoices = ['rock', 'paper', 'scissors']\\n\\n# Simulate playing rock-paper-scissors 50 times\\nresults = []\\nfor _ in range(50):\\n    player1 = random.choice(choices)\\n    player2 = random.choice(choices)\\n    results.append((player1, player2))\\n\\n# Count the number of wins for each choice\\nchoice_wins = {'rock': 0, 'paper': 0, 'scissors': 0}\\nfor player1, player2 in results:\\n    if player1 == 'rock' and player2 == 'scissors' or player1 == 'paper' and player2 == 'rock' or player1 == 'scissors' and player2 == 'paper':\\n        choice_wins[player1] += 1\\n\\n# Find the choice with the most wins\\nmost_lucky_choice = max(choice_wins, key=choice_wins.get)\\nprint(f'The most lucky choice was {most_lucky_choice} with {choice_wins[most_lucky_choice]} wins.')\"}\n",
-      "\n",
-      "Running code interpreter...\n",
-      "[Code Interpreter] The most lucky choice was scissors with 7 wins.\n",
-      "\n",
-      "🚨 invoke_tool(call): [{'is_success': Execution(results=[], logs=Logs(stdout=['The most lucky choice was scissors with 7 wins.\\n'], stderr=[]), error=None, execution_count=1)}]\n",
+      "🚨 MONITORING call: name='execute_python' parameters={'code': 'import random\\n\\n# Define the three choices\\nchoices = [\\'rock\\', \\'paper\\', \\'scissors\\']\\n\\n# Simulate playing rock, paper, scissors 50 times\\nresults = []\\nfor _ in range(50):\\n    player1 = random.choice(choices)\\n    player2 = random.choice(choices)\\n    results.append((player1, player2))\\n\\n# Count the number of wins for each choice\\nchoice_wins = {\\n    \\'rock\\': 0,\\n    \\'paper\\': 0,\\n    \\'scissors\\': 0\\n}\\n\\nfor player1, player2 in results:\\n    if player1 == \\'rock\\' and player2 == \\'scissors\\' or (player1 == \\'scissors\\' and player2 == \\'rock\\'):\\n        choice_wins[player1] += 1\\n    elif player1 == \\'paper\\' and player2 == \\'rock\\' or (player1 == \\'rock\\' and player2 == \\'paper\\'):\\n        choice_wins[player1] += 1\\n    elif player1 == \\'scissors\\' and player2 == \\'paper\\' or (player1 == \\'paper\\' and player2 == \\'scissors\\'):\\n        choice_wins[player1] += 1\\n\\n# Find the choice with the most wins\\nluckiest_choice = max(choice_wins, key=choice_wins.get)\\nprint(f\"The luckiest choice was {luckiest_choice} with {choice_wins[luckiest_choice]} wins.\")'}\n",
       "\n",
       "Running code interpreter...\n",
-      "[Code Interpreter] The most lucky choice was rock with 8 wins.\n",
+      "[Code Interpreter] The luckiest choice was rock with 13 wins.\n",
+      "\n",
+      "🚨 invoke_tool(call): [{'is_success': Execution(results=[], logs=Logs(stdout=['The luckiest choice was rock with 13 wins.\\n'], stderr=[]), error=None, execution_count=1)}]\n",
+      "\n",
+      "Running code interpreter...\n",
+      "[Code Interpreter] The luckiest choice was rock with 14 wins.\n",
       "\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "Object of type NonStreamedChatResponse is not JSON serializable",
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'tool_calls'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me2b_code_interpreter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CodeInterpreter\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m CodeInterpreter(api_key\u001b[38;5;241m=\u001b[39mE2B_API_KEY) \u001b[38;5;28;01mas\u001b[39;00m code_interpreter:\n\u001b[0;32m----> 6\u001b[0m   execution_output \u001b[38;5;241m=\u001b[39m \u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# ERROR: str object has no attribute tool_calls\u001b[39;49;00m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcode_interpreter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mUSER_PROMPT\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m execution_output \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo output from the code interpreter. Did the LLM generate any code?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[29], line 28\u001b[0m, in \u001b[0;36mchat\u001b[0;34m(e2b_code_interpreter, user_message)\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m     27\u001b[0m   tool_results\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcall\u001b[39m\u001b[38;5;124m\"\u001b[39m: call, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutputs\u001b[39m\u001b[38;5;124m\"\u001b[39m: invoke_tool(call, e2b_code_interpreter)})\n\u001b[0;32m---> 28\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdumps\u001b[49m\u001b[43m(\u001b[49m\u001b[43mres\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# send back the tool results\u001b[39;00m\n\u001b[1;32m     31\u001b[0m res \u001b[38;5;241m=\u001b[39m co\u001b[38;5;241m.\u001b[39mchat(\n\u001b[1;32m     32\u001b[0m   model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcommand-r-plus\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     33\u001b[0m   chat_history\u001b[38;5;241m=\u001b[39mres\u001b[38;5;241m.\u001b[39mchat_history,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     37\u001b[0m   tool_results\u001b[38;5;241m=\u001b[39mtool_results,\n\u001b[1;32m     38\u001b[0m )\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/json/__init__.py:238\u001b[0m, in \u001b[0;36mdumps\u001b[0;34m(obj, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    233\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONEncoder\n\u001b[1;32m    234\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[1;32m    235\u001b[0m \u001b[43m    \u001b[49m\u001b[43mskipkeys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mskipkeys\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mensure_ascii\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mensure_ascii\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    236\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcheck_circular\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcheck_circular\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mallow_nan\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mallow_nan\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindent\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    237\u001b[0m \u001b[43m    \u001b[49m\u001b[43mseparators\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mseparators\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdefault\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdefault\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msort_keys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort_keys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m--> 238\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkw\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/json/encoder.py:202\u001b[0m, in \u001b[0;36mJSONEncoder.encode\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    200\u001b[0m chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39miterencode(o, _one_shot\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    201\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(chunks, (\u001b[38;5;28mlist\u001b[39m, \u001b[38;5;28mtuple\u001b[39m)):\n\u001b[0;32m--> 202\u001b[0m     chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(chunks)\n\u001b[1;32m    203\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(chunks)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/json/encoder.py:439\u001b[0m, in \u001b[0;36m_make_iterencode.<locals>._iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    437\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCircular reference detected\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    438\u001b[0m     markers[markerid] \u001b[38;5;241m=\u001b[39m o\n\u001b[0;32m--> 439\u001b[0m o \u001b[38;5;241m=\u001b[39m \u001b[43m_default\u001b[49m\u001b[43m(\u001b[49m\u001b[43mo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    440\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m _iterencode(o, _current_indent_level)\n\u001b[1;32m    441\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m markers \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/json/encoder.py:180\u001b[0m, in \u001b[0;36mJSONEncoder.default\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdefault\u001b[39m(\u001b[38;5;28mself\u001b[39m, o):\n\u001b[1;32m    162\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Implement this method in a subclass such that it returns\u001b[39;00m\n\u001b[1;32m    163\u001b[0m \u001b[38;5;124;03m    a serializable object for ``o``, or calls the base implementation\u001b[39;00m\n\u001b[1;32m    164\u001b[0m \u001b[38;5;124;03m    (to raise a ``TypeError``).\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    178\u001b[0m \n\u001b[1;32m    179\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 180\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mObject of type \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mo\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    181\u001b[0m                     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mis not JSON serializable\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: Object of type NonStreamedChatResponse is not JSON serializable"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me2b_code_interpreter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CodeInterpreter\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m CodeInterpreter(api_key\u001b[38;5;241m=\u001b[39mE2B_API_KEY) \u001b[38;5;28;01mas\u001b[39;00m code_interpreter:\n\u001b[0;32m----> 6\u001b[0m   execution_output \u001b[38;5;241m=\u001b[39m \u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# ERROR: str object has no attribute tool_calls\u001b[39;49;00m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcode_interpreter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mUSER_PROMPT\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m execution_output \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo output from the code interpreter. Did the LLM generate any code?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[35], line 39\u001b[0m, in \u001b[0;36mchat\u001b[0;34m(e2b_code_interpreter, user_message)\u001b[0m\n\u001b[1;32m     30\u001b[0m   res \u001b[38;5;241m=\u001b[39m co\u001b[38;5;241m.\u001b[39mchat(\n\u001b[1;32m     31\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcommand-r-plus\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     32\u001b[0m     chat_history\u001b[38;5;241m=\u001b[39mres\u001b[38;5;241m.\u001b[39mchat_history,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     36\u001b[0m     tool_results\u001b[38;5;241m=\u001b[39mtool_results,\n\u001b[1;32m     37\u001b[0m   )\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m choice \u001b[38;5;129;01min\u001b[39;00m res\u001b[38;5;241m.\u001b[39mchat_history:   \u001b[38;5;66;03m# TBD: Find correct attribute instead of choices... Is it chat_history?\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mchoice\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmessage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtool_calls\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m tool_call \u001b[38;5;129;01min\u001b[39;00m choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls:\n\u001b[1;32m     41\u001b[0m       \u001b[38;5;28;01mif\u001b[39;00m tool_call\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexecute_python\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'tool_calls'"
      ]
     }
    ],
