Add readmes for Together examples

--- a/examples/together-with-code-interpreting/together-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
+++ b/examples/together-with-code-interpreting/together-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
@@ -75,7 +75,7 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: Get your Together AI API key from https://together.ai\n",
+        "# TODO: Get your Together AI API key from https://api.together.xyz/settings/api-keys\n",
         "TOGETHER_API_KEY = \"\"\n",
         "\n",
         "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
