--- a/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
+++ b/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
@@ -311,7 +311,7 @@
         "\n",
         "  code_results = chat_with_llm(\n",
         "    code_interpreter,\n",
-        "    \"Make a chart showing linear regression of the relationship between GDP per capita and life expectancy from the global_economy_indicators. Filter out any missing values or values in wrong format.\"\n",
+        "    \"Make a chart showing linear regression of the relationship between GDP per capita and life expectancy from the data. Filter out any missing values or values in wrong format.\"\n",
         "  )\n",
         "  if code_results:\n",
         "    first_result = code_results[0]\n",
