--- a/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
+++ b/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
@@ -97,9 +97,12 @@
     "\n",
     "# Choose from the codegen models:\n",
     "\n",
+    "MODEL_NAME = \"meta-llama/Meta-Llama-3.1-405B-Instruct-Turbo\"\n",
+    "# MODEL_NAME = \"meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo\"\n",
+    "# MODEL_NAME = \"meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo\"\n",
     "# MODEL_NAME = \"codellama/CodeLlama-70b-Instruct-hf\"\n",
     "# MODEL_NAME = \"deepseek-ai/deepseek-coder-33b-instruct\"\n",
-    "MODEL_NAME = \"Qwen/Qwen2-72B-Instruct\"\n",
+    "# MODEL_NAME = \"Qwen/Qwen2-72B-Instruct\"\n",
     "# See the complete list of Together AI models here: https://api.together.ai/models.\n",
     "\n",
     "SYSTEM_PROMPT = \"\"\"You're a Python data scientist. You are given tasks to complete and you run Python code to solve them.\n",
