Udate models choice in Groq example

--- a/examples/groq-with-code-interpreting/groq-code-interpreter-python/groq_with_e2b_code_interpreter.ipynb
+++ b/examples/groq-with-code-interpreting/groq-code-interpreter-python/groq_with_e2b_code_interpreter.ipynb
@@ -91,9 +91,12 @@
     "\n",
     "# Choose from the codegen models:\n",
     "\n",
-    "MODEL_NAME = \"llama3-70b-8192\"\n",
-    "# MODEL_NAME = \"\"\n",
-    "# MODEL_NAME = \"\"\n",
+    "MODEL_NAME = 'llama-3.1-70b-versatile'\n",
+    "# MODEL_NAME = 'llama-3.1-8b-instant'\n",
+    "# MODEL_NAME = 'llama3-groq-70b-8192-tool-use-preview'\n",
+    "# MODEL_NAME = 'llama3-groq-8b-8192-tool-use-preview'\n",
+    "# MODEL_NAME = 'llama3-70b-8192'\n",
+    "# MODEL_NAME = 'gemma2-9b-it'\n",
     "# See the complete list of Groq models here: https://console.groq.com/docs/models.\n",
     "\n",
     "SYSTEM_PROMPT = \"\"\"You're a Python data scientist. You are given tasks to complete and you run Python code to solve them.\n",
